# ferrux

./: .commitlintrc.yml  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  justfile  limine.conf  make-iso.sh  rust-toolchain.toml  setup_env.sh
Linker/: aarch64.ld  x86_64.ld
aarch64/: Cargo.toml
aarch64/src/: lib.rs
amd64/: Cargo.toml
amd64/src/: cpu.rs  lib.rs
src/: kpanic.rs  limine_info.rs  log.rs  main.rs
src/Linker/: x86_64.ld
src/arch/: mod.rs  timers.rs
src/arch/aarch64/: cpu.rs  log.rs  mod.rs  pl011.rs
src/arch/amd64/: global.asm  global_asm.rs  mod.rs
src/arch/amd64/interrupts/: apic.csv  apic.rs  isa_handler.rs  mod.rs  vectors.rs
src/arch/x86_64/: cpu.rs  gdt.rs  global_asm.rs  log.rs  mod.rs  serial.rs  uart.rs
src/arch/x86_64/cpu/: asm.rs  cpu.rs  initialize.rs  mod.rs
src/arch/x86_64/gdt/: mod.rs
src/arch/x86_64/interrupts/: apic.csv
