[package]
name = "prisma-os"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

[[bin]]
name = "k.sys"
path = "src"
test = false
bench = false

[dependencies]
derive-getters = "0.4"
ignore-result = "0.2"
spin = { version = "0.9", features = ["ticket_mutex"] }
limine = "0.3"

[target.'cfg(target_arch = "x86_64")'.dependencies]
amd64 = { path = "./amd64" }

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64 = { path = "./aarch64" }

# Linting
[lints.clippy]
# Groups
suspicious = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
complexity = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }

undocumented_unsafe_blocks = { level = "warn" }

# Relax some lints because we don't support 32-bit targets
enum_clike_unportable_variant = { level = "allow", priority = -10 }

[workspace]
members = [".", "aarch64", "amd64"]
