[package]
name = "Ferrux"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

[[bin]]
name = "k64"
path = "src/main.rs"
test = false
bench = false

[dependencies]
derive-getters = "0.5"
ignore-result = "0.2"
spin = { version = "0.9", features = ["ticket_mutex"] }
limine = "0.3"
lazy_static = { version = "1.5.0", features = ["spin_no_std"]}

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.15.1"

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "9.4.0"

[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"

# Linting
[lints.clippy]
# Groups
suspicious = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
complexity = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }

undocumented_unsafe_blocks = { level = "warn" }

# Relax some lints because we don't support 32-bit targets
enum_clike_unportable_variant = { level = "allow", priority = -10 }
